--- a/board.css
+++ b/board.css
@@ -1,20 +1,25 @@
+html{
+    background-color: darkgrey
+}
 h1{
     text-align: center;
 }
 table{
     margin: auto;
+    border-collapse: collapse;
 }
 td{
     width: 100px;
     height: 100px;
+    cursor: pointer; 
 }
 .c2{
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
 }
 .r1{
-    border-bottom: 1px solid black;
+    border-bottom: 5px solid black;
 }
 .r2{
-    border-bottom: 1px solid black;
+    border-bottom: 5px solid black;
 }
