--- a/board.css
+++ b/board.css
@@ -12,6 +12,8 @@ td{
     width: 100px;
     height: 100px;
     cursor: pointer; 
+    text-align: center;
+    font-size: 50px;
 }
 .c2{
     border-left: 5px solid black;
