--- a/board.css
+++ b/board.css
@@ -1,27 +1,75 @@
-html{
+@import url('https://fonts.googleapis.com/css?family=Aclonica');
+body{
+
+    fonot-family: Aclonica;
     background-color: darkgrey
 }
-h1{
+
+h1 {
     text-align: center;
 }
-table{
+
+table {
     margin: auto;
     border-collapse: collapse;
 }
-td{
+
+td {
     width: 100px;
     height: 100px;
-    cursor: pointer; 
+    cursor: pointer;
     text-align: center;
     font-size: 50px;
 }
-.c2{
+
+.c2 {
     border-left: 5px solid black;
     border-right: 5px solid black;
 }
-.r1{
+
+.r1 {
     border-bottom: 5px solid black;
 }
-.r2{
+
+.r2 {
     border-bottom: 5px solid black;
+}
+
+#reset {
+    /* color: rgb(255, 255, 255); font-size: 16px;
+    line-height: 16px;
+    padding: 6px;
+    border-radius: 10px;
+    font-family: Georgia, serif;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%);
+    box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px;
+    border: 2px solid rgb(28, 110, 164);
+    display: inline-block;
+    margin: 50px auto;
+    text-align: center;
+    display: block; */
+    text-align: center;
+    border: none;
+    background: #B8BEDD;
+    color: mediumaquamarine ;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: block;
+    margin: 50px auto;
+    border-radius: 10px;
+    padding: 0.6em 1.2em;
+    letter-spacing: 1px;
+}
+
+/* #reset {
+    background: #1C6EA4;
+} */
+
+#reset {
+    background: #144E75;
 }
