--- a/board.css
+++ b/board.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Aclonica');
+@import url('https://fonts.googleapis.com/css?family=Annie Use Your Telescope');
 body{
 
-    fonot-family: Aclonica;
+    font-family:'Annie Use Your Telescope';
     background-color: darkgrey
 }
 
