Ai playing in all the squares instead of just one

--- a/board.css
+++ b/board.css
@@ -21,6 +21,10 @@ td {
     text-align: center;
     font-size: 50px;
 }
+#status{
+    font-size: 50px;
+    
+}
 
 .c2 {
     border-left: 5px solid black;
@@ -36,23 +40,6 @@ td {
 }
 
 #reset {
-    /* color: rgb(255, 255, 255); font-size: 16px;
-    line-height: 16px;
-    padding: 6px;
-    border-radius: 10px;
-    font-family: Georgia, serif;
-    font-weight: normal;
-    text-decoration: none;
-    font-style: normal;
-    font-variant: normal;
-    text-transform: none;
-    background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%);
-    box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px;
-    border: 2px solid rgb(28, 110, 164);
-    display: inline-block;
-    margin: 50px auto;
-    text-align: center;
-    display: block; */
     text-align: center;
     border: none;
     background: #B8BEDD;
@@ -66,9 +53,6 @@ td {
     letter-spacing: 1px;
 }
 
-/* #reset {
-    background: #1C6EA4;
-} */
 
 #reset {
     background: #144E75;
